Removed and added data, update libraries
- removed accidently added data files
- added old WCE files which are not available online anymore
- updated libraries
- fixed all Eclipse code warnings